podbitka wersji działa CSRF i sprytny handler